--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run: cd C:/Deepak/Test/test_repo/TestBuildApp
+        run:  cd "/c/Deepak/Test/test_repo/TestBuildApp"
 
       - name: Build Project
         run: dotnet build TestBuildApp.csproj
