--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message
+      - name: Display Start Message test
         run: echo "Starting the build process..."
 
-      - name: Change to Project Directory
-        run:  cd "/c/Deepak/Test/test_repo/TestBuildApp"
-
       - name: Build Project
-        run: dotnet build TestBuildApp.csproj
+        shell: bash
+        run: |
+          cd /c/Deepak/Test/test_repo/TestBuildApp
+          dotnet build TestBuildApp.csproj
