--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+name: CI
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Display Start Message New
+        run: echo "Starting the build process..."
+
+      - name: Change to Project Directory
+        run: cd $GITHUB_WORKSPACE/TestBuildApp
+
+      - name: Build Project
+        run: dotnet build TestBuildApp.csproj
