--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New
+      - name: Display Start Message New1
         run: echo "Starting the build process..."
 
       - name: Debug Information
