--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New4
+      - name: Display Start Message New5
         run: echo "Starting the build process..."
 
       - name: Print GitHub Actions Workspace Path
@@ -28,7 +28,7 @@ jobs:
           ls -al $GITHUB_WORKSPACE
 
       - name: Change to Project Directory
-        run: cd "$GITHUB_WORKSPACE/TestBuildApp"
+        run: cd "$GITHUB_WORKSPACE"
 
       - name: Build Project
         run: dotnet build TestBuildApp.csproj
