--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,15 @@ jobs:
     steps:
       - name: Display Start Message New5
         run: echo "Starting the build process..."
-
+        
       - name: Print GitHub Actions Workspace Path
         run: echo "GitHub Actions workspace path:" $GITHUB_WORKSPACE
 
       - name: List Contents
         run: ls -al
 
-      - name: Debug Information
-        run: |
-          pwd
-          ls -al $GITHUB_WORKSPACE
-
       - name: Change to Project Directory
-        run: cd "$GITHUB_WORKSPACE"
+        run: cd "$GITHUB_WORKSPACE/TestBuildApp"
 
       - name: Build Project
-        run: dotnet build TestBuildApp.csproj
-        working-directory: $GITHUB_WORKSPACE/TestBuildApp
+        run: dotnet build
