--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New5
+      - name: Display Start Message
         run: echo "Starting the build process..."
-        
+
       - name: Print GitHub Actions Workspace Path
         run: echo "GitHub Actions workspace path:" $GITHUB_WORKSPACE
 
@@ -23,7 +23,7 @@ jobs:
         run: ls -al
 
       - name: Change to Project Directory
-        run: cd "$GITHUB_WORKSPACE/TestBuildApp"
+        run: cd "$GITHUB_WORKSPACE" && cd $(find . -type d -name 'TestBuildApp' -print -quit)
 
       - name: Build Project
         run: dotnet build
