--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New7
+      - name: Display Start Message new8
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run: cd $GITHUB_WORKSPACE/TestBuildApp
+        run: cd $GITHUB_WORKSPACE && cd $(find . -type d -name 'TestBuildApp' -print -quit)
 
       - name: Build Project
         run: dotnet build TestBuildApp.csproj
