--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run:  cd $GITHUB_WORKSPACE/$(find . -type d -iname 'TestBuildApp' -print -quit)
-
+        run:  |
+             cd $GITHUB_WORKSPACE/$(find . -type d -iname 'TestBuildApp' -print -quit)
+             pwd  # Print the current directory for debugging purposes
+             
       - name: Build Project
-        run: dotnet build C:/Deepak/Test/test_repo/TestBuildApp/TestBuildApp.csproj
+        run: dotnet build TestBuildApp.csproj
