--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message new11
+      - name: Display Start Message new12
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
         run:  |
-             cd $GITHUB_WORKSPACE/$(find . -type d -iname 'TestBuildApp' -print -quit)
-             pwd  # Print the current directory for debugging purposes
+            cd $GITHUB_WORKSPACE
+            cd TestBuildApp
+            pwd  # Print the current directory for debugging purposes
              
       - name: Build Project
         run: dotnet build TestBuildApp.csproj
