--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New14
+      - name: Display Start Message New15
         run: echo "Starting the build process..."
+
+      - name: Display Current Directory
+        run: pwd
 
       - name: Change to Project Directory
         run: cd TestBuildApp
