--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,20 +4,23 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New15
+      - name: Display Start Message New20
         run: echo "Starting the build process..."
 
-      - name: Display Current Directory
-        run: pwd
-
       - name: Change to Project Directory
-        run: cd TestBuildApp
-
+        run:  |
+            cd $GITHUB_WORKSPACE
+            cd TestBuildApp
+            pwd  # Print the current directory for debugging purposes
+             
       - name: Build Project
-        run: dotnet build
+        run: dotnet build TestBuildApp.csproj
