--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message New20
+      - name: Display Start Message New21
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run:  |
-            cd $GITHUB_WORKSPACE
-            cd TestBuildApp
-            pwd  # Print the current directory for debugging purposes
-             
+        run: cd "$GITHUB_WORKSPACE/$(find . -type d -name 'TestBuildApp' -print -quit)"
+
+      - name: Display Current Directory
+        run: pwd
+
       - name: Build Project
-        run: dotnet build TestBuildApp.csproj
+        run: dotnet build
