--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message new26
+      - name: Display Start Message
         run: echo "Starting the build process..."
-        
+
+      - name: Change to Project Directory
+        run: |
+          cd $GITHUB_WORKSPACE/TestBuildApp
+          ls -al  # List contents of the directory for debugging
+
+      - name: Display Current Directory
+        run: pwd  # Print the current directory for debugging
+
       - name: Build Project
         run: dotnet build
