--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Change to Project Directory
         run: |
           cd $GITHUB_WORKSPACE  # Navigate to the root of the workspace
-          cd TestBuildApp        # Navigate to the TestBuildApp directory
+          cd $(find . -type d -name 'TestBuildApp' -print -quit)  # Locate the TestBuildApp directory
           ls -al                 # List contents of the directory for debugging
 
       - name: Display Current Directory
