--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Display GitHub Actions Workspace
-        run: echo "GitHub Actions workspace path: $GITHUB_WORKSPACE"
+        run: echo "GitHub Actions workspace path:" $GITHUB_WORKSPACE
 
       - name: List Contents
         run: ls -al
