--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -13,17 +16,8 @@ jobs:
       - name: Display Start Message
         run: echo "Starting the build process..."
 
-      - name: Display GitHub Actions Workspace
-        run: echo "GitHub Actions workspace path:" $GITHUB_WORKSPACE
-
-      - name: List Contents
-        run: ls -al
-
       - name: Change to Project Directory
-        run: cd "$GITHUB_WORKSPACE" && cd $(find . -type d -name 'TestBuildApp' -print -quit)
-
-      - name: Display Current Directory
-        run: pwd
+        run: cd $GITHUB_WORKSPACE/TestBuildApp
 
       - name: Build Project
-        run: dotnet build
+        run: dotnet build C:/Deepak/Test/test_repo/TestBuildApp/TestBuildApp.csproj
