--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -13,20 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Display Start Message
-        run: echo "Starting the build process..."
 
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: List Workspace Contents
-        run: ls -al "${{ github.workspace }}"
+      - name: Display Start Message
+        run: echo "Starting the build process..."
 
       - name: Change to Project Directory
         run: cd "${{ github.workspace }}"
 
-      - name: List Project Directory Contents
-        run: ls -al TestBuildApp
+      - name: Restore Dependencies
+        run: dotnet restore TestBuildApp/TestBuildApp.csproj
 
       - name: Build Project
         run: dotnet build TestBuildApp/TestBuildApp.csproj
