--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v7  
+
+      - name: Install dotnet version tool
+        run: dotnet tool install -g dotnet-version-cli
+
+      - name: Set Version
+        run: dotnet version --project Qor3.sln --auto-increment
+
       - name: Display Start Message
         run: echo "Starting the build process..."
 
