--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Display Start Message
         run: echo "Starting the build process..."
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v5
+
+      - name: Install dotnet version tool
+        run: dotnet tool install -g dotnet-version-cli
 
       - name: Change to Project Directory
         run: cd "${{ github.workspace }}"
@@ -31,5 +36,3 @@ jobs:
 
       - name: Set Version
         run: dotnet version --auto-increment --project-file TestBuildApp/TestBuildApp.csproj
-
-  # Add more steps for testing, deployment, etc.
