--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
+        run: cd "${{ github.workspace }}/TestBuildApp"
 
       - name: Restore Dependencies
         run: dotnet restore TestBuildApp/TestBuildApp.sln
@@ -39,7 +39,7 @@ jobs:
         run: echo "Starting the deployment process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}/TestBuildApp"  # Update this path based on your project structure
+        run: cd "${{ github.workspace }}/TestBuildApp"
 
       - name: Publish Application
         run: dotnet publish -c Release -o ./publish
