--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Display Directory Contents
+        run: ls -R
+
       - name: Display Start Message
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
         run: cd "${{ github.workspace }}/TestBuildApp"
+
+      - name: Display Project Directory Contents
+        run: ls -R
 
       - name: Restore Dependencies
         run: dotnet restore TestBuildApp.sln
@@ -35,11 +41,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Display Directory Contents
+        run: ls -R
+
       - name: Display Start Message
         run: echo "Starting the deployment process..."
 
       - name: Change to Project Directory
         run: cd "${{ github.workspace }}/TestBuildApp"
+
+      - name: Display Project Directory Contents
+        run: ls -R
 
       - name: Publish Application
         run: dotnet publish -c Release -o ${GITHUB_WORKSPACE}/publish
