--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,32 +20,36 @@ jobs:
         run: echo "Starting the build process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
+        run: cd "${{ github.workspace }}/TestBuildApp"
 
       - name: Restore Dependencies
-        run: dotnet restore TestBuildApp/TestBuildApp.sln
+        run: dotnet restore
 
       - name: Build Project
-        run: dotnet build TestBuildApp/TestBuildApp.sln
+        run: dotnet build
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Display Deploy Message
-        run: echo "Starting the deployment process..."
-
-      - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
+      - name: Create Publish Directory
+        run: mkdir -p ${GITHUB_WORKSPACE}/publish
 
       - name: Publish Application
         run: dotnet publish -c Release -o ${GITHUB_WORKSPACE}/publish
 
-      - name: Display Publish Contents
-        run: ls -R ${GITHUB_WORKSPACE}/publish
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
 
-      - name: Deploy Locally
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Display Start Message
+        run: echo "Starting the deployment process..."
+
+      - name: Change to Project Directory
+        run: cd "${{ github.workspace }}/TestBuildApp"
+
+      - name: Copy to Deployment Location
         run: cp -r ${GITHUB_WORKSPACE}/publish/* /c/Deepak/deployment
+
+      - name: Display Deployment Contents
+        run: ls -R /c/Deepak/deployment
