--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
         run: cd "${{ github.workspace }}/TestBuildApp"
 
       - name: Restore Dependencies
-        run: dotnet restore
+        run: dotnet restore TestBuildApp/TestBuildApp.sln
 
       - name: Build Project
-        run: dotnet build
+        run: dotnet build TestBuildApp/TestBuildApp.sln
 
       - name: Create Publish Directory
         run: mkdir -p ${GITHUB_WORKSPACE}/publish
