--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,7 @@ jobs:
 
       - name: Display Publish Directory Contents
         run: ls -R ${GITHUB_WORKSPACE}/publish
+
+      - name: Publish Application
+        run: dotnet publish -c Release -o ${GITHUB_WORKSPACE}/publish
+
