--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,20 @@ jobs:
       - name: Display Published Artifacts
         run: ls -R ${GITHUB_WORKSPACE}/publish
 
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Display Start Message
+        run: echo "Starting the deployment process..."
+
+      - name: Change to Project Directory
+        run: cd "${{ github.workspace }}/TestBuildApp"
+
+      - name: Copy to Deployment Location
+        run: cp -r ${GITHUB_WORKSPACE}/publish/* TestBuildApp/Deployement
+
+      - name: Display Deployment Contents
+        run: ls -R /path/to/deployment/location
+
 
 
