--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         run: echo "Starting the deployment process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}/TestBuildApp"
+        run: cd "${{ github.workspace }}/TestBuildApp//Deployement"
 
       - name: Copy to Deployment Location
         run: cp -r ${GITHUB_WORKSPACE}/publish/* TestBuildApp/Deployement
