--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,13 +54,13 @@ jobs:
         run: echo "Starting the deployment process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}/TestBuildApp//Deployement"
+        run: cd "${{ github.workspace }}/TestBuildApp/Deployement"
 
       - name: Copy to Deployment Location
         run: cp -r ${GITHUB_WORKSPACE}/publish/* TestBuildApp/Deployement
 
-      - name: Display Deployment Contents
-        run: ls -R /path/to/deployment/location
+      - name: Display Publish Contents
+        run: ls -R ${GITHUB_WORKSPACE}/publish
 
 
 
