--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,17 @@ jobs:
         run: ls -R "${{ github.workspace }}/TestBuildApp"
 
       - name: Publish Application
-        run: dotnet publish -c Release -o ${GITHUB_WORKSPACE}/publish TestBuildApp/TestBuildApp.sln
+        run: dotnet publish -c Release -r win-x64 --self-contained -o ${GITHUB_WORKSPACE}/publish TestBuildApp/TestBuildApp.sln
        
       - name: Display Published Artifacts
         run: ls -R ${GITHUB_WORKSPACE}/publish
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -54,13 +61,10 @@ jobs:
         run: echo "Starting the deployment process..."
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}/TestBuildApp/Deployement"
+        run: cd "${{ github.workspace }}/TestBuildApp/Deployment"
         
       - name: Copy to Deployment Location
-        run: cp -r ${GITHUB_WORKSPACE}/TestBuildApp/publish/* TestBuildApp/Deployement
+        run: cp -r ${GITHUB_WORKSPACE}/publish/* TestBuildApp/Deployment
 
-      - name: Display Publish Contents
-        run: ls -R ${GITHUB_WORKSPACE}/publish
-
-
-
+      - name: Display Deployment Contents
+        run: ls -R ${GITHUB_WORKSPACE}/TestBuildApp/Deployment
