--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,9 @@ jobs:
           name: publish-artifact
           path: ${GITHUB_WORKSPACE}/publish
 
+      - name: Display Publish Directory Contents After Download
+        run: ls -R $GITHUB_WORKSPACE/publish
+
       - name: Display Publish Directory Contents
         run: ls -R ${GITHUB_WORKSPACE}/publish
 
