--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: publish-artifact
-          path: publish  # Updated path to the artifact directory
+          path: publish
 
       - name: Display Publish Directory Contents After Download
         run: ls -R $GITHUB_WORKSPACE/publish
