--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
         run: mkdir -p "C:/Deepak/deployment/"
 
       - name: Copy to Deployment Location
-        run: cp -r ${{ github.workspace }}/publish/* "C:/Deepak/deployment/"
+        run: cp -r "${GITHUB_WORKSPACE}/publish/"* "C:/Deepak/deployment/"
         
       - name: Display Deployment Contents
         run: ls -R "C:/Deepak/deployment"
