--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,8 +77,12 @@ jobs:
       - name: Create Deployment Directory
         run: mkdir -p "C:/Deepak/deployment/"
 
+      - name: Display Deployment Directory Contents Before Copy
+        run: ls -R "C:/Deepak/deployment/"
+
       - name: Copy to Deployment Location
         run: cp -r "${GITHUB_WORKSPACE}/publish/"* "C:/Deepak/deployment/"
-        
-      - name: Display Deployment Contents
-        run: ls -R "C:/Deepak/deployment"
+
+      - name: Display Deployment Directory Contents After Copy
+        run: ls -R "C:/Deepak/deployment/"
+
