--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,47 +41,5 @@ jobs:
         run: ls -R "${{ github.workspace }}/TestBuildApp"
 
       - name: Publish Application
-        run: dotnet publish -c Release -r win-x64 --self-contained -o ${GITHUB_WORKSPACE}/publish TestBuildApp/TestBuildApp.sln
-       
-      - name: Display Published Artifacts
-        run: ls -R ${GITHUB_WORKSPACE}/publish
-
-      - name: Archive Publish Directory
-        uses: actions/upload-artifact@v2
-        with: 
-          name: publish-artifact
-          path: ${{ github.workspace }}/publish
-
-  deploy:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Display Start Message
-        run: echo "Starting the deployment process..."
-
-      - name: Download Published Artifacts
-        uses: actions/download-artifact@v2
-        with:
-           name: publish-artifact
-           path: ${{ github.workspace }}/publish
-
-      - name: Display Downloaded Artifact Contents
-        run: ls -R ${GITHUB_WORKSPACE}/publish
-        working-directory: ${{ github.workspace }}
-
-      - name: Create Deployment Directory
-        run: mkdir -p "C:/Deepak/deployment/"
-
-      - name: Display Deployment Directory Contents Before Copy
-        run: ls -R "C:/Deepak/deployment/"
-
-      - name: Copy to Deployment Location
-        run: cp -r "${GITHUB_WORKSPACE}/publish/"* "C:/Deepak/deployment/"
-
-      - name: Display Deployment Directory Contents After Copy
-        run: ls -R "C:/Deepak/deployment/"
+        run: dotnet publish -c Release -r win-x64 --self-contained
+      
