--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
         run: ls -R "${{ github.workspace }}/TestBuildApp"
 
       - name: Publish Application
-        run: dotnet publish -c Release -r win-x64 --self-contained
-      
+        run: dotnet publish -c Release -r win-x64 --self-contained -o ./publish
+    
