--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,9 +41,8 @@ jobs:
         run: ls -R "${{ github.workspace }}/TestBuildApp"
 
       - name: Publish Application
-        run: dotnet publish -c Release -r win-x64 --self-contained -o ./publish
-        working-directory: TestBuildApp
-
+        run: dotnet publish -c Release -r win-x64 --self-contained -o ${{ github.workspace }}/publish
+        
       - name: Debug
         run: |
          echo "Current directory: $PWD"
