--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,18 @@ jobs:
       - name: Display Directory Contents
         run: ls -R "${{ github.workspace }}/TestBuildApp"
 
+      - name: Check Mergeability
+        run: |
+          pr_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+          mergeable=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                      -X GET "https://api.github.com/repos/${{ github.repository }}/pulls/$pr_number" \
+                      | jq --raw-output .mergeable)
+
+          if [[ "$mergeable" == "false" ]]; then
+            echo "Pull request is not mergeable. Aborting workflow."
+            exit 1
+          fi
+
       - name: Publish Application
         run: |
           cd TestBuildApp   # Change to the directory where your project or solution file is located
