--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,24 @@
-name: EdgePlus CI/CD Pipeline
+name: CI/CD with SonarQube
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Display Start Message
-        run: echo "Starting the build process..."
+      # Other steps for building and testing your project
 
-      - name: Run SonarScanner
-        run: C:\Users\Deepak Mangal\sonar\sonar-scanner-cli-5.0.1.3006-windows\sonar-scanner-5.0.1.3006-windows\bin\sonar-scanner.bat -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=${{ secrets.admin }} -Dsonar.password="${{ secrets.H_H1605_04 }}"
-
-      - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
-
-      - name: Restore Dependencies
-        run: dotnet restore TestBuildApp/TestBuildApp.sln
-
-      - name: Build Project
-        run: dotnet build TestBuildApp/TestBuildApp.sln
-
-
-
-      
+      - name: SonarQube Scan
+        run: |
+          sonar-scanner \
+            -Dsonar.host.url=http://192.168.16.26:9099 \
+            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
+        env:
+          SONARQUBE_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
