--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,34 @@
-name: CI/CD with SonarQube
+name: EdgePlus CI/CD Pipeline
 
 on:
   push:
     branches:
-      - master
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: SonarQube Scan
-        run: |
-          sonar-scanner \
-            -Dsonar.host.url=http://192.168.16.26:9099 \
-            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
-        env:
-          SONARQUBE_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+      - name: Display Start Message
+        run: echo "Starting the build process..."
+
+      - name: Run SonarScanner
+        run: sonar-scanner -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=${{ secrets.admin }} -Dsonar.password="${{ secrets.H_H1605_04 }}"
+
+      - name: Change to Project Directory
+        run: cd "${{ github.workspace }}"
+
+
+      - name: Restore Dependencies
+        run: dotnet restore TestBuildApp/TestBuildApp.sln
+
+      - name: Build Project
+        run: dotnet build TestBuildApp/TestBuildApp.sln
