--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run SonarScanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: sonar-scanner -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=$SONAR_TOKEN
+        run: C:\Users\Deepak Mangal\sonar\sonar-scanner-cli-5.0.1.3006-windows\sonar-scanner-5.0.1.3006-windows\bin\sonar-scanner.bat -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=$SONAR_TOKEN
 
       - name: Change to Project Directory
         run: cd "${{ github.workspace }}"
