--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout Repository
@@ -21,14 +21,11 @@ jobs:
 
       - name: Run SonarScanner
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Reference the secret here
-        run: |
-          sonar-scanner \
-            -Dsonar.host.url=http://192.168.16.26:9099 \
-            -Dsonar.login=$SONAR_TOKEN
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: C:\Users\Deepak Mangal\sonar\sonar-scanner-cli-5.0.1.3006-windows\sonar-scanner-5.0.1.3006-windows\bin\sonar-scanner.bat -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=%SONAR_TOKEN%
 
       - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
+        run: cd ${{ github.workspace }}
 
       - name: Restore Dependencies
         run: dotnet restore TestBuildApp/TestBuildApp.sln
